--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
+    implementation 'com.dropbox.mobile.store:store4:4.0.0-alpha07'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 }
