--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
     implementation 'com.dropbox.mobile.store:store4:4.0.0-alpha07'
+    implementation 'com.dropbox.mobile.store:store-rx2:4.0.0-alpha07'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 }
