--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'com.dropbox.mobile.store:store4:4.0.0-alpha06'
     implementation 'com.dropbox.mobile.store:store-rx2:4.0.0-alpha06'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
